# fastapi-simple-app

./: README.md  alembic.ini  main.py  pyproject.toml  setup.cfg
migrations/: env.py
migrations/versions/: 88ddd90df649_initial_migration.py  db6e0ee89ba4_add_role_to_the_user_model.py
