[tool.poetry]
name = "fastapi-simple-app"
version = "0.1.0"
description = ""
authors = ["Anton Shefer <rezajkee@mail.ru>"]
readme = "README.md"
packages = [{include = "fastapi_simple_app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
SQLAlchemy = "^1.4.46"
databases = "^0.7.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.1"
python-decouple = "^3.7"
email-validator = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
